--- a/application/views/index.html
+++ b/application/views/index.html
@@ -49,10 +49,45 @@
 <div class="amz-toolbar" id="amz-toolbar">
     <a href="#top" title="回到顶部" class="am-icon-btn am-icon-arrow-up" id="amz-go-top"></a>
     <a href="/" title="回到首页" class="am-icon-btn am-icon-home"></a>
-    <a href="/getting-started/faq" title="地图导航" class="am-icon-btn am-icon-send-o"></a>
+    <a href="javascript:wxNav();" title="地图导航" class="am-icon-btn am-icon-send-o"></a>
 </div>
 <script type="text/javascript" src="/js/jquery.min.js"></script>
 <script type="text/javascript" src="/js/swipe.js"></script>
+
+<script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
+<script>
+	wx.config({
+		debug: false,
+		appId: '{$wxappId}',
+		timestamp: '{$wxtimestamp}',
+		nonceStr: '{$wxnonceStr}',
+		signature: '{$wxsignature}',
+		jsApiList: [
+			'openLocation',
+			'getLocation'
+		]
+	});
+	
+	wx.error(function (res) {
+		alert(res.errMsg);
+	});
+
+	//调用微信内置地图显示
+	function wxNav(){
+		wx.openLocation({
+			latitude: 31.288860,
+			longitude: 121.145070,
+			name: '花桥房产超市',
+			address: '昆山花桥赛格',
+			scale: 15,
+			infoUrl: '/'
+		});
+	}
+	
+</script>
+
+
+
 <script type="text/javascript">
 function $$(a){
 	return(typeof a=="object")?a:document.getElementById(a);
