--- a/application/views/index.html
+++ b/application/views/index.html
@@ -58,10 +58,10 @@
 <script>
 	wx.config({
 		debug: false,
-		appId: '{$wxappId}',
-		timestamp: '{$wxtimestamp}',
-		nonceStr: '{$wxnonceStr}',
-		signature: '{$wxsignature}',
+		appId: '{{$wxappId}}',
+		timestamp: '{{$wxtimestamp}}',
+		nonceStr: '{{$wxnonceStr}}',
+		signature: '{{$wxsignature}}',
 		jsApiList: [
 			'openLocation',
 			'getLocation'
