--- a/application/views/index.html
+++ b/application/views/index.html
@@ -11,39 +11,34 @@
 </head>
 <body id="index">
 <div class="g-doc" id="wrapper">
-	<div id="scroller">
-		<div class="m-slider">
-		<div class="m-slider-pic" id="J_slideWrap">
-			<ul class="">
-				<li><a href="" title=""><img src="http://dummyimage.com/640x280/000/fff"/><span>陆家嘴集团钜献 内环花木国际生活蓝</span></a></li>
-				<li><a href="" title=""><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACAAAAANBAMAAAA6ZnEvAAAAMFBMVEX///8BAQECAgIDAwMEBAQFBQUGBgYHBwcICAgJCQkKCgoLCwsMDAwNDQ0ODg4PDw+j3JH3AAAAEHRSTlP///////////////////8A4CNdGQAAAAlwSFlzAAALEwAACxMBAJqcGAAAAA9JREFUCNdj+I8GGIaRAAB0TM8xY/9xnAAAAABJRU5ErkJggg==" src1="http://dummyimage.com/640x280/000/fff"/><span>陆家嘴集团钜献 内环花木国际生活蓝</span></a></li>
-				<li><a href="" title=""><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACAAAAANBAMAAAA6ZnEvAAAAMFBMVEX///8BAQECAgIDAwMEBAQFBQUGBgYHBwcICAgJCQkKCgoLCwsMDAwNDQ0ODg4PDw+j3JH3AAAAEHRSTlP///////////////////8A4CNdGQAAAAlwSFlzAAALEwAACxMBAJqcGAAAAA9JREFUCNdj+I8GGIaRAAB0TM8xY/9xnAAAAABJRU5ErkJggg==" src1="http://dummyimage.com/640x280/000/fff"/><span>陆家嘴集团钜献 内环花木国际生活蓝</span></a></li>
-				<li><a href="" title=""><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACAAAAANBAMAAAA6ZnEvAAAAMFBMVEX///8BAQECAgIDAwMEBAQFBQUGBgYHBwcICAgJCQkKCgoLCwsMDAwNDQ0ODg4PDw+j3JH3AAAAEHRSTlP///////////////////8A4CNdGQAAAAlwSFlzAAALEwAACxMBAJqcGAAAAA9JREFUCNdj+I8GGIaRAAB0TM8xY/9xnAAAAABJRU5ErkJggg==" src1="http://dummyimage.com/640x280/000/fff"/><span>陆家嘴集团钜献 内环花木国际生活蓝</span></a></li>
-				<li><a href="" title=""><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACAAAAANBAMAAAA6ZnEvAAAAMFBMVEX///8BAQECAgIDAwMEBAQFBQUGBgYHBwcICAgJCQkKCgoLCwsMDAwNDQ0ODg4PDw+j3JH3AAAAEHRSTlP///////////////////8A4CNdGQAAAAlwSFlzAAALEwAACxMBAJqcGAAAAA9JREFUCNdj+I8GGIaRAAB0TM8xY/9xnAAAAABJRU5ErkJggg==" src1="http://dummyimage.com/640x280/000/fff"/><span>陆家嘴集团钜献 内环花木国际生活蓝</span></a></li>
-			</ul>
-		</div>
-		<div class="m-slider-doc" id="J_slideNav"></div>
-	</div>
-		<div class="slider-tit">花桥精选楼盘</div>
-		<ul class="m-pic-list" id="Jm-pic-list">
-		{{foreach from=$projects item=row}}
-			<li>
-				<a href="" target="_blank">
-					<div class="m-build-pic">
-						<img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACAAAAANBAMAAAA6ZnEvAAAAMFBMVEX///8BAQECAgIDAwMEBAQFBQUGBgYHBwcICAgJCQkKCgoLCwsMDAwNDQ0ODg4PDw+j3JH3AAAAEHRSTlP///////////////////8A4CNdGQAAAAlwSFlzAAALEwAACxMBAJqcGAAAAA9JREFUCNdj+I8GGIaRAAB0TM8xY/9xnAAAAABJRU5ErkJggg==" src1="/uploadfiles/{{$row.bg_pic}}" />
-						<span class="building-name">{{$row.name}}</span>
-					</div>
-					<div class="m-bulid-tit">
-						<span class="mark">{{$row.title}}</span>
-						<span class="smark">均价<em class="red">{{$row.avg_price}}</em>元/㎡</span>
-					</div>
-				</a>
-		   </li>
-		 {{/foreach}}
-		</ul>
-		<div id="pullUp">
-		</div>
-	</div>		
+    <div class="swiper-container" id="Jm-ind-slider">
+        <div class="swiper-wrapper">
+            <div class="swiper-slide"><a href="" title=""><img src="http://dummyimage.com/640x280/000/fff"/><span class="txt">陆家嘴集团钜献 内环花木国际生活蓝</span></a></div>
+            <div class="swiper-slide"><a href="" title=""><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACAAAAANBAMAAAA6ZnEvAAAAMFBMVEX///8BAQECAgIDAwMEBAQFBQUGBgYHBwcICAgJCQkKCgoLCwsMDAwNDQ0ODg4PDw+j3JH3AAAAEHRSTlP///////////////////8A4CNdGQAAAAlwSFlzAAALEwAACxMBAJqcGAAAAA9JREFUCNdj+I8GGIaRAAB0TM8xY/9xnAAAAABJRU5ErkJggg==" src1="http://dummyimage.com/640x280/000/fff"/><span class="txt">陆家嘴集团钜献 内环花木国际生活蓝</span></a></div>
+            <div class="swiper-slide"><a href="" title=""><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACAAAAANBAMAAAA6ZnEvAAAAMFBMVEX///8BAQECAgIDAwMEBAQFBQUGBgYHBwcICAgJCQkKCgoLCwsMDAwNDQ0ODg4PDw+j3JH3AAAAEHRSTlP///////////////////8A4CNdGQAAAAlwSFlzAAALEwAACxMBAJqcGAAAAA9JREFUCNdj+I8GGIaRAAB0TM8xY/9xnAAAAABJRU5ErkJggg==" src1="http://dummyimage.com/640x280/000/fff"/><span class="txt">陆家嘴集团钜献 内环花木国际生活蓝</span></a></div>
+            <div class="swiper-slide"><a href="" title=""><img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACAAAAANBAMAAAA6ZnEvAAAAMFBMVEX///8BAQECAgIDAwMEBAQFBQUGBgYHBwcICAgJCQkKCgoLCwsMDAwNDQ0ODg4PDw+j3JH3AAAAEHRSTlP///////////////////8A4CNdGQAAAAlwSFlzAAALEwAACxMBAJqcGAAAAA9JREFUCNdj+I8GGIaRAAB0TM8xY/9xnAAAAABJRU5ErkJggg==" src1="http://dummyimage.com/640x280/000/fff"/><span class="txt">陆家嘴集团钜献 内环花木国际生活蓝</span></a></div>
+        </div>
+        <div class="pagination-inner"></div>
+    </div>
+    <div class="slider-tit">花桥精选楼盘</div>
+    <ul class="m-pic-list" id="Jm-pic-list">
+    {{foreach from=$projects item=row}}
+        <li>
+            <a href="" target="_blank">
+                <div class="m-build-pic">
+                    <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACAAAAANBAMAAAA6ZnEvAAAAMFBMVEX///8BAQECAgIDAwMEBAQFBQUGBgYHBwcICAgJCQkKCgoLCwsMDAwNDQ0ODg4PDw+j3JH3AAAAEHRSTlP///////////////////8A4CNdGQAAAAlwSFlzAAALEwAACxMBAJqcGAAAAA9JREFUCNdj+I8GGIaRAAB0TM8xY/9xnAAAAABJRU5ErkJggg==" src1="/uploadfiles/{{$row.bg_pic}}" />
+                    <span class="building-name">{{$row.name}}</span>
+                </div>
+                <div class="m-bulid-tit">
+                    <span class="mark">{{$row.title}}</span>
+                    <span class="smark">均价<em class="red">{{$row.avg_price}}</em>元/㎡</span>
+                </div>
+            </a>
+       </li>
+     {{/foreach}}
+    </ul>
+    <div id="pullUp">
+    </div>
 </div>
 <p class="footer">©宜居花桥房产超市</p>
 <div class="amz-toolbar" id="amz-toolbar">
@@ -52,68 +47,23 @@
     <a href="javascript:wxNav();" title="地图导航" class="am-icon-btn am-icon-send-o"></a>
 </div>
 <script type="text/javascript" src="/js/jquery.min.js"></script>
-<script type="text/javascript" src="/js/swipe.js"></script>
-
-<script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
-<script>
-	wx.config({
-		debug: false,
-		appId: '{{$wxappId}}',
-		timestamp: '{{$wxtimestamp}}',
-		nonceStr: '{{$wxnonceStr}}',
-		signature: '{{$wxsignature}}',
-		jsApiList: [
-			'openLocation',
-			'getLocation'
-		]
-	});
-	
-	wx.error(function (res) {
-		alert(res.errMsg);
-	});
-
-	//调用微信内置地图显示
-	function wxNav(){
-		wx.openLocation({
-			latitude: 31.288860,
-			longitude: 121.145070,
-			name: '花桥房产超市',
-			address: '昆山花桥赛格',
-			scale: 15,
-			infoUrl: '/'
-		});
-	}
-	
-</script>
-
-
-
+<script type="text/javascript" src="/js/idangerous.swiper-2.1.min.js" ></script>
+<script type="text/javascript" src="/js/index.js" ></script>
 <script type="text/javascript">
-function $$(a){
-	return(typeof a=="object")?a:document.getElementById(a);
-	}
-//焦点图切换
-var Jwrap = $$("J_slideWrap"),
-Jnav = $$("J_slideNav");
-window.GfocusSlide = swipe(Jwrap, {
-    auto: 5000,
-    speed: 100,
-    continuous: true,
-    nav: Jnav,
-    callback: function(a, b) {
-        var c = b.parentNode;
-        if (c.timer) {
-            clearTimeout(window.GfocusSlide.timer);
-        }
-        c.timer = setTimeout(function() {
-            c.style.height = (b.clientHeight || b.offsetHeight) + "px";
-        },
-        120);
-    }
-});
+$(function(){
+	var maxW=Math.max(document.documentElement.clientWidth,window.innerWidth),
+	maxH=Math.max(document.documentElement.clientHeight,window.innerHeight);
+	var imgH =Math.floor(maxW*280/640);
+	$('.swiper-slide').height(imgH);
+
+	new Swiper('#Jm-ind-slider', {
+        pagination: '.pagination-inner',
+        paginationClickable: true
+    });
+})
 //右侧导航
 $(window).scroll(function(){
-	$(window).scrollTop()>100?$('#amz-go-top').addClass('am-active'):$('#amz-go-top').removeClass('am-active');
+	$(window).scrollTop()>10?$('#amz-go-top').addClass('am-active'):$('#amz-go-top').removeClass('am-active');
 });
 </script>
 </body>
