--- a/css/style.css
+++ b/css/style.css
@@ -70,15 +70,26 @@ body{background-color:#fff;}
 .swiper-container .swiper-slide {overflow: hidden;z-index: 1; float:left; position:relative; }
 .swiper-slide a{display: block;}
 .swiper-wrapper{position: relative; overflow: hidden;}
-.swiper-wrapper .swiper-slide .txt{width:80%;padding:0 17% 0 3%;height:50px;line-height:70px;position:absolute;
-bottom:0px;color:#fff;display:block;white-space:nowrap;word-wrap:normal;-o-text-overflow:ellipsis;
-text-overflow:ellipsis;overflow:hidden;font-size:14px;background:rgba(0,0,0,0.8);}
 .pagination-inner{height:6px;position:absolute;bottom:10px;  z-index:100;}
 .pagination-inner .swiper-pagination-switch{display:inline-block;width:6px;height:6px;-webkit-border-radius:50%;-moz-border-radius:50%;border-radius:50%;background-color:#b4b8bd;margin:0 2px;font-size:0px;vertical-align:top;}
 .pagination-inner .swiper-active-switch{background:#fff;}
 .swiper-container .swiper-slide-active{ display:block;}
 #Jm-slider .pagination-inner{width:100%;text-align:center;}
 #Jm-ind-slider .pagination-inner{right:10px;}
+
+/* 焦点图 */
+.m-slider{width:100%;margin:0 auto;position:relative;}
+.m-slider-pic{overflow:hidden;}
+.m-slider-pic ul{overflow:hidden;}
+.m-slider-pic li{position:relative;float:left;width:100%; height:100%;}
+.m-slider-pic li:not(:first-child){display:none;}
+.m-slider-pic li a{display:block;}
+.m-slider-pic li img{display:block;width:100%!important;min-height:100px;}
+.m-slider-pic li .txt{width:80%;padding:0 17% 0 3%;height:50px;line-height:70px;position:absolute;bottom:0px;color:#fff;display:block;white-space:nowrap;word-wrap:normal;-o-text-overflow:ellipsis;text-overflow:ellipsis;overflow:hidden;font-size:14px;background:rgba(0,0,0,0.8);background:-webkit-gradient(linear,left top,left bottom,from(transparent),to(rgba(0,0,0,0.8)));background:-webkit-linear-gradient(top,transparent 30%,rgba(0,0,0,0.8) 100%);background:linear-gradient(to bottom,transparent 30%,rgba(0,0,0,0.8) 100%);}
+.m-slider-doc{height:6px;position:absolute;right:5px;bottom:10px;}
+.m-slider-doc span{display:inline-block;width:6px;height:6px;-webkit-border-radius:50%;-moz-border-radius:50%;border-radius:50%;background-color:#b4b8bd;margin:0 2px;font-size:0px;vertical-align:top;}
+.m-slider-doc .current{background:#fff;}
+
 
 .slider-tit{margin-bottom: 15px;  text-align: left; text-indent: 1em; width: 100%; height: 32px; line-height: 32px;color: #fff; background: #8ec6d9;}
 .tabs {display: box;display:-webkit-box;display:-moz-box; width:100%; margin-bottom:0.5rem;}
@@ -94,7 +105,7 @@ text-overflow:ellipsis;overflow:hidden;font-size:14px;background:rgba(0,0,0,0.8)
 
 #pullUp{width:100%; text-align:center;padding:0.5rem 0; font-size:1.6rem; padding-bottom:80px;}
 
-#detail{ background: #8ec6d9;padding-bottom: 50px;}
+#detail{ background: #8ec6d9;padding-bottom: 50px;}#dynamic{padding-bottom: 50px;}
 .f-news{margin-bottom: 15px; background: #fff; padding:1rem 1rem; line-height: 34px;}
 .f-p-name,.f-p-price{ color: #000; font-size: 2rem;}
 .f-p-price{ color: #f00;}
@@ -118,3 +129,10 @@ text-overflow:ellipsis;overflow:hidden;font-size:14px;background:rgba(0,0,0,0.8)
 .ul-new-list li p{padding-left: 110px;}
 .ul-new-list li p span{ display: block; font-weight: bold;}
 .ul-new-list li:last-child{border:none;}
+.ul-new-list .e-txt{float:left;}.ul-new-list .e-date{float:right; color:#c0c0c0;}
+.f-item-detail .ul-new-list li{border:none; padding:0.5rem 0;}
+
+.f-dy-tb {padding:1rem;}
+.f-dy-tb .f-dy-tit{ font-size:1.6rem; display:block;margin-bottom:5px;}
+.f-dy-tb p{font-size:1.6rem; line-height:30px; color:#999;}
+.f-dy-img{margin:0.5rem 0;}
