--- a/application/views/detail.html
+++ b/application/views/detail.html
@@ -8,6 +8,10 @@
 <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no"/>
 <meta content="telephone=no" name="format-detection"/>
 <link rel="stylesheet" href="/css/style.css">
+<script type="text/javascript" src="/js/jquery.min.js"></script>
+<script type="text/javascript" src="/js/idangerous.swiper-2.1.min.js" ></script>
+<script type="text/javascript" src="/js/detail.js" ></script>
+<script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
 </head>
 <body id="detail">
 <div class="g-doc">
@@ -99,21 +103,8 @@
         </ul>   
     </div>
 </div>
-<p class="footer">©宜居花桥房产超市</p>
-<div class="amz-toolbar" id="amz-toolbar">
-    <a href="#top" title="回到顶部" class="am-icon-btn am-icon-arrow-up" id="amz-go-top"></a>
-    <a href="/getting-started/faq" title="回到首页" class="am-icon-btn am-icon-home"></a>
-    <a href="/getting-started/faq" title="地图导航" class="am-icon-btn am-icon-send-o"></a>
-</div>
-<script type="text/javascript" src="/js/jquery.min.js"></script>
-<script type="text/javascript" src="/js/idangerous.swiper-2.1.min.js" ></script>
-<script type="text/javascript" src="/js/detail.js" ></script>
-<script type="text/javascript">
-//右侧导航
-$(window).scroll(function(){
-	$(window).scrollTop()>10?$('#amz-go-top').addClass('am-active'):$('#amz-go-top').removeClass('am-active');
-});
-</script>
+{{include file="public.html"}}
+
 </body>
 </html>
 
