--- a/application/views/index.html
+++ b/application/views/index.html
@@ -11,6 +11,7 @@
 <script type="text/javascript" src="/js/swipe.js"></script>
 <script type="text/javascript" src="/js/jquery.min.js"></script>
 <script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
+<script type="text/javascript" src="/js/index.js"></script>
 </head>
 <body id="index">
 <div class="g-doc" id="wrapper">
