--- a/application/views/index.html
+++ b/application/views/index.html
@@ -66,6 +66,9 @@ window.GfocusSlide = swipe(Jwrap, {
 });
 
 $(function(){
+	var maxW=Math.max(document.documentElement.clientWidth,window.innerWidth);
+	var imgH =Math.floor(maxW*2/3);
+	$('#Jm-pic-list li img').height(imgH);  
 	lazyforselectbbs();
 })
 </script>
