--- a/css/style.css
+++ b/css/style.css
@@ -121,7 +121,7 @@ body{background-color:#fff;}
 .f-item-th span{border-left:2px solid #4f4f4f;padding-left: 0.5rem;}
 .dl-list{padding:1rem 1rem;}
 .dl-list dt{font-size: 1.6rem; margin-bottom:0.5rem;}
-.dl-list dd span{ float: left; width: 50%;}
+.dl-list dd span{ display:block;}.dl-list dd span em{ font-weight:bold;}
 
 .ul-new-list{margin:0 1rem;padding:1rem 0;}
 .ul-new-list li{padding:1rem 0;overflow: hidden; zoom:1; border-bottom: 1px dotted #999;}
@@ -135,4 +135,4 @@ body{background-color:#fff;}
 .f-dy-tb {padding:1rem;}
 .f-dy-tb .f-dy-tit{ font-size:1.6rem; display:block;margin-bottom:5px;}
 .f-dy-tb p{font-size:1.6rem; line-height:30px; color:#999;}
-.f-dy-img{margin:0.5rem 0;}
+.f-dy-img{margin:0.5rem 0; width:320px;}
