--- a/application/views/index.html
+++ b/application/views/index.html
@@ -69,6 +69,7 @@ $(function(){
 	var maxW=Math.max(document.documentElement.clientWidth,window.innerWidth);
 	var imgH =Math.floor(maxW*2/3);
 	$('#Jm-pic-list li img').height(imgH);  
+	lazyforslide();
 	lazyforselectbbs();
 })
 </script>
