--- a/application/views/index.html
+++ b/application/views/index.html
@@ -8,8 +8,8 @@
 <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no"/>
 <meta content="telephone=no" name="format-detection"/>
 <link rel="stylesheet" href="/css/style.css">
-<script type="text/javascript" src="/js/swipe.js"></script>
 <script type="text/javascript" src="/js/jquery.min.js"></script>
+<script type="text/javascript" src="/js/swipe.js"></script>
 <script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
 <script type="text/javascript" src="/js/index.js"></script>
 </head>
@@ -68,6 +68,7 @@ window.GfocusSlide = swipe(Jwrap, {
 $(function(){
 	var maxW=Math.max(document.documentElement.clientWidth,window.innerWidth);
 	var imgH =Math.floor(maxW*2/3);
+    $('#J_slideWrap img').height(imgH);
 	$('#Jm-pic-list li img').height(imgH);  
 	lazyforselectbbs();
 })
