--- a/application/views/guajiang.html
+++ b/application/views/guajiang.html
@@ -54,7 +54,7 @@
 			<div class="box">
 				<div class="title-red">
 					<span>
-						<if condition="$Guajiang['usenums'] neq 2">恭喜你中奖了<else/>您已经中过奖了</if>
+						{{if true}}恭喜你中奖了{{else}}您已经中过奖了{{/if}}
 					</span>
 				</div>
 				<div class="Detail">
